--- a/LORA_TestBench/Debug/makefile
+++ b/LORA_TestBench/Debug/makefile
@@ -12,6 +12,7 @@ RM := rm -rf
 -include Drivers/STM32L4xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
 -include Core/Src/LORA/subdir.mk
+-include Core/Src/GNSS/subdir.mk
 -include Core/Src/subdir.mk
 -include objects.mk
 
