--- a/BASELIQ/Debug/makefile
+++ b/BASELIQ/Debug/makefile
@@ -15,6 +15,7 @@ RM := rm -rf
 -include Middlewares/Third_Party/FreeRTOS/Source/subdir.mk
 -include Drivers/STM32L4xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
+-include Core/Src/RTOS_subfunctions/subdir.mk
 -include Core/Src/LORA/subdir.mk
 -include Core/Src/GNSS/subdir.mk
 -include Core/Src/subdir.mk
