--- a/BASELIQ/Debug/makefile
+++ b/BASELIQ/Debug/makefile
@@ -10,6 +10,7 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include Middlewares/Third_Party/TraceRecorder/streamports/RingBuffer/subdir.mk
+-include Middlewares/Third_Party/TraceRecorder/streamports/ARM_ITM/subdir.mk
 -include Middlewares/Third_Party/TraceRecorder/subdir.mk
 -include Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/subdir.mk
 -include Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F/subdir.mk
