BEFORE UbX_Format UPGRADE

--- a/LoRA_TC/Debug/makefile
+++ b/LoRA_TC/Debug/makefile
@@ -68,7 +68,7 @@ main-build: LoRA_TC.elf secondary-outputs
 
 # Tool invocations
 LoRA_TC.elf LoRA_TC.map: $(OBJS) $(USER_OBJS) C:\Users\romain.pace\Documents\GitHub\BASELIQ-Dev\LoRA_TC\STM32L476RGTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "LoRA_TC.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\romain.pace\Documents\GitHub\BASELIQ-Dev\LoRA_TC\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="LoRA_TC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "LoRA_TC.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\romain.pace\Documents\GitHub\BASELIQ-Dev\LoRA_TC\STM32L476RGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="LoRA_TC.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -u _printf_float -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
